Updated home page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,256 @@
+<!DOCTYPE html>
+<html lang="en">
 
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>CIT 261 Mobile Application Development</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/heroic-features.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="Topic #">CIT 261 Mobile Application Development</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="Topic #navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="Topic #">Home
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Topic #">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Topic #">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Topic #">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container">
+
+      <!-- Jumbotron Header -->
+      <header class="jumbotron my-4">
+        <h1 class="display-3">Working and Skilled Fluency</h1>
+        <p class="lead">Thomas Whitelock</p>
+       <!-- <a href="Topic #" class="btn btn-primary btn-lg">Call to action!</a> -->
+      </header>
+
+      <!-- Page Features -->
+      <div class="row text-center">
+
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="images/progress.png" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Topic #1</h4>
+              <p class="card-text">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays.</p>
+            </div>
+            <div class="card-footer">
+              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="images/progress.png" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Topic #2</h4>
+              <p class="card-text">Object Creation Functions, Inheritance, Properties, Methods, Instantiation.</p>
+            </div>
+            <div class="card-footer">
+              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="images/progress.png" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Topic #3</h4>
+              <p class="card-text">JSON Parse, Stringify.</p>
+            </div>
+            <div class="card-footer">
+              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="images/progress.png" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Topic #4</h4>
+              <p class="card-text">Using XMLHTTPRequest to Consume a JSON Web Service.</p>
+            </div>
+            <div class="card-footer">
+              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+		
+		        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="images/progress.png" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Topic #5</h4>
+              <p class="card-text">Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects.</p>
+            </div>
+            <div class="card-footer">
+              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="images/progress.png" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Topic #6</h4>
+              <p class="card-text">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</p>
+            </div>
+            <div class="card-footer">
+              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="images/progress.png" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Topic #7</h4>
+              <p class="card-text">Manipulating CSS Class Properties Using JavaScript.</p>
+            </div>
+            <div class="card-footer">
+              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="images/progress.png" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Topic #8</h4>
+              <p class="card-text">Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript.</p>
+            </div>
+            <div class="card-footer">
+              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+		
+		
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="images/progress.png" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Topic #9</h4>
+              <p class="card-text">Standard JavaScript Events Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events.</p>
+            </div>
+            <div class="card-footer">
+              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+		
+		
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="images/progress.png" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Topic #10</h4>
+              <p class="card-text">HTML5 Tags - Video, Audio, and Canvas.</p>
+            </div>
+            <div class="card-footer">
+              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+		
+		
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="images/progress.png" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Topic #11</h4>
+              <p class="card-text">Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries (Thought Library).</p>
+            </div>
+            <div class="card-footer">
+              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+		
+		        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="images/progress.png" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Topic #12</h4>
+              <p class="card-text">Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries (Thought Library).</p>
+            </div>
+            <div class="card-footer">
+              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+		
+	<div class="col-lg-3 col-md-6 mb-4">
+          <div class="card">
+            <img class="card-img-top" src="images/progress.png" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Topic #13</h4>
+              <p class="card-text">Designing, Defining, and Triggering CSS3 Animations without Custom Libraries (Thought Library).</p>
+            </div>
+            <div class="card-footer">
+              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <!-- /.row -->
+
+    </div>
+    <!-- /.container -->
+
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Thomas Whitelock 2018</p>
+      </div>
+      <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  </body>
+
+</html>
