--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <p class="card-text">JSON Parse, Stringify.</p>
             </div>
             <div class="card-footer">
-              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+              <a href="topic-3.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
