--- a/topic-3.html
+++ b/topic-3.html
@@ -91,7 +91,7 @@ obj.Characters[1].firstName + " " + obj.Characters[1].lastName;</p>
 		  
 		  		  <p class="lead"><strong>Script to create JSON string using Stringify:</strong><br>
 				  
-				  var arr = [ "Zerg", "Terran", "Protoss"];<br>
+				  var arr = [ "Race":"Zerg", "Race":"Terran", "Race":"Protoss"];<br>
 				  var myJSON = JSON.stringify(arr);<br>
 				  document.getElementById("Stringify").innerHTML = myJSON;<br><br>
 
