--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <p class="card-text">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays.</p>
             </div>
             <div class="card-footer">
-              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+              <a href="topic-1.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
