--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <p class="card-text">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</p>
             </div>
             <div class="card-footer">
-              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+              <a href="topic-6.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
