--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <p class="card-text">Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects.</p>
             </div>
             <div class="card-footer">
-              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+              <a href="topic-5.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
@@ -147,7 +147,7 @@
               <p class="card-text">Manipulating CSS Class Properties Using JavaScript.</p>
             </div>
             <div class="card-footer">
-              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+              <a href="topic-7.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
