Cleaning up templates

--- a/topic-1.html
+++ b/topic-1.html
@@ -31,15 +31,6 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -236,6 +227,7 @@
 				}<br>
 			}</p>
 			
+			<p>Example ouput below:</p>
 			<p id="ElseIf-Demo"></p>
 		  <script>
 				var elseIfText = ""; // Empty string to store results
@@ -339,6 +331,26 @@
 
 			<hr>
 						<p class="lead"><strong>Associative Arrays:</strong><br></p>
+						<p>Associative Arrays are Key Value pairs, it is an abstract data type.</p>
+						
+						<p>Here is the Associative Array example printed out, in this case the value of CS2.</p>
+							<p id ="AssociativeDemo"></p>
+						<script>
+							var blizzardGames = new Array();
+							blizzardGames["SC2"] = "StarCraft 2";
+							blizzardGames["HOTS"] = "Heroes of the Storm";
+							blizzardGames["WoW"] = "World of Warcraft";
+							document.getElementById("AssociativeDemo").innerHTML = blizzardGames.SC2;
+
+						</script>
+						
+						<p><strong>Here is the code:</strong><br>
+						var blizzardGames = new Array();<br>
+							blizzardGames["SC2"] = "StarCraft 2";<br>
+							blizzardGames["HOTS"] = "Heroes of the Storm";<br>
+							blizzardGames["WoW"] = "World of Warcraft";<br>
+							document.getElementById("AssociativeDemo").innerHTML = blizzardGames.SC2;<br>
+						</p>
 			<hr>
 			
 			
@@ -372,26 +384,26 @@
                 <div class="col-lg-6">
                   <ul class="list-unstyled mb-0">
                     <li>
-                      <a href="#">Web Design</a>
+                      While Loop
                     </li>
                     <li>
-                      <a href="#">HTML</a>
+                      Do-While Loop
                     </li>
                     <li>
-                      <a href="#">Freebies</a>
+                      For Loop
                     </li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul class="list-unstyled mb-0">
                     <li>
-                      <a href="#">JavaScript</a>
+                      Else-If
                     </li>
                     <li>
-                      <a href="#">CSS</a>
+                      Parameters
                     </li>
                     <li>
-                      <a href="#">Tutorials</a>
+                      Arrays
                     </li>
                   </ul>
                 </div>
@@ -401,9 +413,9 @@
 
           <!-- Side Widget -->
           <div class="card my-4">
-            <h5 class="card-header">Side Widget</h5>
+            <h5 class="card-header">Summary</h5>
             <div class="card-body">
-              You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+              Dealing with loops and arrays in Javascript.
             </div>
           </div>
 
