fixed error in topic one

--- a/topic-3.html
+++ b/topic-3.html
@@ -31,15 +31,6 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -124,27 +115,18 @@ obj.Characters[1].firstName + " " + obj.Characters[1].lastName;</p>
                 <div class="col-lg-6">
                   <ul class="list-unstyled mb-0">
                     <li>
-                      <a href="#">Web Design</a>
+                      Stringify
                     </li>
                     <li>
-                      <a href="#">HTML</a>
+                      JSON
                     </li>
                     <li>
-                      <a href="#">Freebies</a>
-                    </li>
+                      Parse
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul class="list-unstyled mb-0">
-                    <li>
-                      <a href="#">JavaScript</a>
-                    </li>
-                    <li>
-                      <a href="#">CSS</a>
-                    </li>
-                    <li>
-                      <a href="#">Tutorials</a>
-                    </li>
+
                   </ul>
                 </div>
               </div>
@@ -153,9 +135,9 @@ obj.Characters[1].firstName + " " + obj.Characters[1].lastName;</p>
 
           <!-- Side Widget -->
           <div class="card my-4">
-            <h5 class="card-header">Side Widget</h5>
+            <h5 class="card-header">Summary</h5>
             <div class="card-body">
-              You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+              Using JSON and Stringify to move data around.
             </div>
           </div>
 
@@ -196,8 +178,7 @@ obj.Characters[1].firstName + " " + obj.Characters[1].lastName;
 
  </script>
   
-  <p>Using Stringify, create an JSON string</p>
-  <p id="Stringify"></p>
+
 
 <script>
 
