--- a/topic-7.html
+++ b/topic-7.html
@@ -96,8 +96,12 @@
 			</p>
 			
 			<p>Useful links:<br>
-				https://stackoverflow.com/questions/41682079/uncaught-typeerror-cannot-set-property-top-of-undefined<br>
+				<a href = "https://stackoverflow.com/questions/41682079/uncaught-typeerror-cannot-set-property-top-of-undefined">
+				https://stackoverflow.com/questions/41682079/uncaught-typeerror-cannot-set-property-top-of-undefined
+				</a><br>
+				<a href="https://www.w3schools.com/jsref/met_document_getelementsbyclassname.asp">
 				https://www.w3schools.com/jsref/met_document_getelementsbyclassname.asp
+				</a>
 				</p>
 
 		  <script>
@@ -140,27 +144,19 @@
                 <div class="col-lg-6">
                   <ul class="list-unstyled mb-0">
                     <li>
-                      <a href="#">Web Design</a>
+                      CSS
                     </li>
                     <li>
-                      <a href="#">HTML</a>
+                      javascript
                     </li>
                     <li>
-                      <a href="#">Freebies</a>
+                      Manipulating CSS with javaScript
                     </li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul class="list-unstyled mb-0">
-                    <li>
-                      <a href="#">JavaScript</a>
-                    </li>
-                    <li>
-                      <a href="#">CSS</a>
-                    </li>
-                    <li>
-                      <a href="#">Tutorials</a>
-                    </li>
+
                   </ul>
                 </div>
               </div>
@@ -169,9 +165,9 @@
 
           <!-- Side Widget -->
           <div class="card my-4">
-            <h5 class="card-header">Side Widget</h5>
+            <h5 class="card-header">Summary</h5>
             <div class="card-body">
-              You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+              Using CSS and JavaScript to make a really useless and annoying example.
             </div>
           </div>
 
