Updated text in topic 3

--- a/topic-7.html
+++ b/topic-7.html
@@ -147,10 +147,10 @@
                       CSS
                     </li>
                     <li>
-                      javascript
+                      Javascript
                     </li>
                     <li>
-                      Manipulating CSS with javaScript
+                      Manipulating CSS with JavaScript
                     </li>
                   </ul>
                 </div>
