general text cleaning up

--- a/topic-5.html
+++ b/topic-5.html
@@ -118,7 +118,7 @@
     return todoSession;<br>
 }<br></strong>
 
-	<p>It first checks to see if there is actually any data stored. If there is, then JSON parse is used to retrieve the stoarage and convert to
+	<p>It first checks to see if there is actually any data stored. If there is, then JSON parse is used to retrieve the storage and convert to
 	Javascript styles data.</p>
 	<br>
 	<hr>
