--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               <p class="card-text">Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript.</p>
             </div>
             <div class="card-footer">
-              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+              <a href="topic-8.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
