--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <p class="card-text">Standard JavaScript Events Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events.</p>
             </div>
             <div class="card-footer">
-              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+              <a href="topic-9.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
