--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/progress.png" alt="">
+            <img class="card-img-top" src="images/10.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #1</h4>
               <p class="card-text">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays.</p>
@@ -89,7 +89,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/progress.png" alt="">
+            <img class="card-img-top" src="images/10.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #3</h4>
               <p class="card-text">JSON Parse, Stringify.</p>
@@ -115,7 +115,7 @@
 		
 		        <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/progress.png" alt="">
+            <img class="card-img-top" src="images/submitted.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #5</h4>
               <p class="card-text">Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects.</p>
@@ -128,7 +128,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/progress.png" alt="">
+            <img class="card-img-top" src="images/82.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #6</h4>
               <p class="card-text">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</p>
@@ -141,7 +141,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/progress.png" alt="">
+            <img class="card-img-top" src="images/10.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #7</h4>
               <p class="card-text">Manipulating CSS Class Properties Using JavaScript.</p>
