--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/progress.png" alt="">
+            <img class="card-img-top" src="images/submitted.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #8</h4>
               <p class="card-text">Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript.</p>
@@ -168,7 +168,7 @@
 		
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/progress.png" alt="">
+            <img class="card-img-top" src="images/submitted.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #9</h4>
               <p class="card-text">Standard JavaScript Events Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events.</p>
