--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <p class="card-text">Object Creation Functions, Inheritance, Properties, Methods, Instantiation.</p>
             </div>
             <div class="card-footer">
-              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+              <a href="topic-2.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
