--- a/topic-2.html
+++ b/topic-2.html
@@ -66,7 +66,7 @@
           <hr>
 
           <!-- Post Content -->
-		  <p class="lead"><strong>Script to create Object from JSON string:</strong><br></p>
+		  <p class="lead"><strong>Creating Objects:</strong><br></p>
       <p>In JavaScript you can create an object by defining it, a basic example looks like a value pair definition.</p>
       <p><i> var pokemon = {name: "Luxray Lvl X", hitPoints: 110,type: "Electric"}</i></p>
       <p>Using the above object definition, you can see how values can be returned like so:</p>
