--- a/topic-2.html
+++ b/topic-2.html
@@ -66,7 +66,7 @@
           <hr>
 
           <!-- Post Content -->
-		  <p class="lead"><strong>Creating Objects:</strong><br></p>
+		  <p class="lead"><strong>Creating:</strong><br></p>
       <p>In JavaScript you can create an object by defining it, a basic example looks like a value pair definition.</p>
       <p><i> var pokemon = {name: "Luxray Lvl X", hitPoints: 110,type: "Electric"}</i></p>
       <p>Using the above object definition, you can see how values can be returned like so:</p>
@@ -81,8 +81,7 @@
       <p>One nice feature is that you can include a function name in the object itself. In the above example, to display the nicely formatted 
         text about the Luxray, this code was attached to the .innerHTML property:<br> </p>
       <p><i>.innerHTML = pokemon.name +" is an " + pokemon.type + " Pokemon with " + pokemon.hitPoints +"HP"</i></p>
-      <p>This could be re-written to include the display function in the code, like this:</p>
-      <p><i>var pokemon = {<br>name: "Luxray Lvl X",<br> hitPoints: 110,<br>type: "Electric"<br>}</i></p>
+      <p>This could be re-written to include the display function in the code.</p>
      
 
       <P>Here is the same output as before, just using the function built into the object:</P>
