--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/progress.png" alt="">
+            <img class="card-img-top" src="images/submitted.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #2</h4>
               <p class="card-text">Object Creation Functions, Inheritance, Properties, Methods, Instantiation.</p>
