--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
 		
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/progress.png" alt="">
+            <img class="card-img-top" src="images/submitted.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #10</h4>
               <p class="card-text">HTML5 Tags - Video, Audio, and Canvas.</p>
             </div>
             <div class="card-footer">
-              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+              <a href="topic-10.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
