nwe images for headers

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/submitted.png" alt="">
+            <img class="card-img-top" src="images/82.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #2</h4>
               <p class="card-text">Object Creation Functions, Inheritance, Properties, Methods, Instantiation.</p>
@@ -115,7 +115,7 @@
 		
 		        <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/submitted.png" alt="">
+            <img class="card-img-top" src="images/6.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #5</h4>
               <p class="card-text">Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects.</p>
