--- a/index.html
+++ b/index.html
@@ -33,16 +33,6 @@
               <a class="nav-link" href="Topic #">Home
                 <span class="sr-only">(current)</span>
               </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Topic #">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Topic #">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Topic #">Contact</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -209,26 +199,26 @@
 		
 		        <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/progress.png" alt="">
+            <img class="card-img-top" src="images/submitted.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #12</h4>
               <p class="card-text">Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries (Thought Library).</p>
             </div>
             <div class="card-footer">
-              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+              <a href="topic-12.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
 		
 	<div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/progress.png" alt="">
+            <img class="card-img-top" src="images/submitted.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #13</h4>
               <p class="card-text">Designing, Defining, and Triggering CSS3 Animations without Custom Libraries (Thought Library).</p>
             </div>
             <div class="card-footer">
-              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+              <a href="topic-13.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
