--- a/weather.html
+++ b/weather.html
@@ -8,7 +8,7 @@
     ** Remember that you need to obtain your own API key by contacting AccuWeather. **
     -->
 <head>
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
 
     <script type="text/javascript">
 
