--- a/weather.html
+++ b/weather.html
@@ -49,7 +49,7 @@
 
             var awxCityLookUp = function (freeText) {
                 awxClearMessages();
-                locationUrl = "http://apidev.accuweather.com/locations/v1/search?q=" + freeText + "&apikey=" + apiKey;
+                locationUrl = "https://apidev.accuweather.com/locations/v1/search?q=" + freeText + "&apikey=" + apiKey;
 
                 $.ajax({
                     type: "GET",
@@ -98,7 +98,7 @@
             // For more info about Current Conditions API go to http://apidev.accuweather.com/developers/locations
 
             var awxGetCurrentConditions = function (locationKey) {
-                currentConditionsUrl = "http://apidev.accuweather.com/currentconditions/v1/" + 
+                currentConditionsUrl = "https://apidev.accuweather.com/currentconditions/v1/" + 
                     locationKey + ".json?language=" + language + "&apikey=" + apiKey;
                 $.ajax({
                     type: "GET",
