--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="Topic #">Home
+              <a class="nav-link" href="index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
           </ul>
@@ -92,13 +92,13 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/progress.png" alt="">
+            <img class="card-img-top" src="images/submitted.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #4</h4>
               <p class="card-text">Using XMLHTTPRequest to Consume a JSON Web Service.</p>
             </div>
             <div class="card-footer">
-              <a href="Topic #" class="btn btn-primary">Find Out More!</a>
+              <a href="topic-4.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
