Updated last submissions

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/submitted.png" alt="">
+            <img class="card-img-top" src="images/10.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #4</h4>
               <p class="card-text">Using XMLHTTPRequest to Consume a JSON Web Service.</p>
@@ -144,7 +144,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/submitted.png" alt="">
+            <img class="card-img-top" src="images/10.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #8</h4>
               <p class="card-text">Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript.</p>
@@ -158,7 +158,7 @@
 		
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/submitted.png" alt="">
+            <img class="card-img-top" src="images/10.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #9</h4>
               <p class="card-text">Standard JavaScript Events Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events.</p>
@@ -172,7 +172,7 @@
 		
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/submitted.png" alt="">
+            <img class="card-img-top" src="images/10.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #10</h4>
               <p class="card-text">HTML5 Tags - Video, Audio, and Canvas.</p>
@@ -186,7 +186,7 @@
 		
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/submitted.png" alt="">
+            <img class="card-img-top" src="images/10.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #11</h4>
               <p class="card-text">Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries (Thought Library).</p>
@@ -199,7 +199,7 @@
 		
 		        <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/submitted.png" alt="">
+            <img class="card-img-top" src="images/10.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #12</h4>
               <p class="card-text">Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries (Thought Library).</p>
@@ -212,7 +212,7 @@
 		
 	<div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="images/submitted.png" alt="">
+            <img class="card-img-top" src="images/10.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Topic #13</h4>
               <p class="card-text">Designing, Defining, and Triggering CSS3 Animations without Custom Libraries (Thought Library).</p>
